fix scrollbar height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@ body {
 /* Scrollbar styles */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track {
